--- a/ExpandableTextview/build.gradle
+++ b/ExpandableTextview/build.gradle
@@ -1,12 +1,24 @@
 apply plugin: 'com.android.library'
+apply plugin: "org.sonarqube"
 
+sonarqube {
+    androidVariant 'debug'
+    properties {
+        property "sonar.projectName", "ExpandableTextView"
+        property "sonar.projectKey", "com.hungnc.company.expandabletextview"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.language", "java"
+        property "sonar.organization","chihung93-github"
+        property "sonar.sources", "src/main/java/"
+    }
+}
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -22,10 +34,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    testImplementation 'junit:junit:4.12'
 }
