--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,13 +1,14 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/src
+    working_directory: ~/ExpandableTextView
     docker:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - checkout
+      - checkout:
+         path: ~/ExpandableTextView
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
 #      - run:
