--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,14 +1,14 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/ExpandableTextView
+    working_directory: ~/ExpandableTextView/app
     docker:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout:
-         path: ~/ExpandableTextView
+         path: ~/ExpandableTextView/app
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
 #      - run:
