--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,14 +1,14 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/ExpandableTextView/app
+    working_directory: ~/ExpandableTextView
     docker:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout:
-         path: ~/ExpandableTextView/app
+         path: ~/ExpandableTextView/ExpandableTextView/app
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
