--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -3,12 +3,12 @@ jobs:
   build:
     working_directory: ~/ExpandableTextView
     docker:
-      - image: circleci/android:api-25-alpha
+      - image: redis@sha256:54057dd7e125ca41afe526a877e8bd35ec2cdd33b9217e022ed37bdcf7d09673
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout:
-         path: ~/ExpandableTextView/ExpandableTextView/app
+         path: ~/ExpandableTextView/app
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
